# WallpaperChanger

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  TODO  icons.rc  resources.qrc
forms/: wallpaperchanger.ui
src/: main.cpp  wallpaperchanger.cpp  wallpaperchanger.h
